src/components/Job/style.module.css
.box{
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    width: 37rem;
    background-color: #fff;
    gap: 1.5rem;
    padding: 3rem 3rem;
    /* border: 1px solid #00000090; */
    border-radius: 0.5rem;
    transition: all 0.1s ease-in-out;
    position: relative;
    border-bottom: 2px solid #5964DF;
}
.edits{
    position: absolute;
    top: 3rem;
    right: 4rem;
    display: flex;
    gap: 1.5rem;
}
.box:hover{
    transition: all 0.1s ease-in-out;
    box-shadow: 0 0 2rem rgba(0,0,0,0.07);

}
.heading{
    display: flex;
    gap: 1rem;
    flex-direction: column;
    text-transform: capitalize;
}
.heading h1{
    font-size: 2rem;
    font-weight: 600;
}
.heading h2{
    font-weight: 500;
    font-size: 1.6rem;
    margin-top: -0.5rem;
    color: #474d6a;
}
.column{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
}
.clbox{
    display: flex;
    align-items: center;
    gap: 1rem;
}
.icon, .clbox p{
    font-size: 1.5rem;
    font-weight: 500;
    color: #474d6a;
}
.icon{
    font-size: 1.7rem !important;
    align-self: center;
    margin-top: 0.3rem;
}
.iconn{
    font-size: 2.5rem !important;
    align-self: center;
    margin-top: 0.3rem;
}
.line{
    height: 80%;
    width: 1px;
    background-color: #00000030;
    margin: 0 15px;
}
.para{
    font-size: 1.4rem;
    color: #00000090;
}
.footer{
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}
.date{
    display: flex;
    gap: 1rem;
}
.date h1{
    font-size: 1.6rem !important;
    font-weight: 600;
    color: #666;
}
.date p{
    font-size: 1.4rem;
    color: #00000080;
}
.apply{
    display: flex;
    gap: 0.5rem;
    align-items: center;
}
.apply p{
    font-size: 1.4rem;
    color: #5964DF;
    /* color: #202020; */
}
.apply .icon{
    font-size: 1.8rem !important;
}
.columnn{
    display: flex;
    margin-top: -1rem;
}
.aside{
    position: absolute;
    top: 0;
    align-self: flex-start;
    padding: 3rem;
    border-radius: 1rem;
    border: 1px solid #00000030;
    box-shadow: 0 0 20px rgba(0,0,0,0.07);
    display: flex;
    flex-direction: column;
    margin-bottom: 100px;
    gap: 1rem;
}
.headin{
    font-size: 2.2rem;
    padding: 0.5rem 2rem;
    padding-right: 6rem;
    /* background-color: #00000020; */
    cursor: pointer;
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
    width: 100%;
    /* text-overflow: ellipsis; */
}
.companies{
    padding: 0.5rem 2rem;
    padding-right: 6rem;
    font-size: 2rem;
}
.active{
    font-weight: 600;
}
.editIcon{
    padding: 0.7rem;
    border-radius: 50%;
    background-color: #00000010;
    display: flex;
    align-items: center;
    justify-content: center;
}
.deleteIcon{
    padding: 0.7rem;
    border-radius: 5px;
    background-color: #ff000036;
}

.deleteIcon .iconn{
    fill: red !important;
}
.arrow {
	width: 7.5px;
	height: 7.5px;
	box-sizing: border-box;
	/* position: absolute;
	left: 50%;
	top: 50%; */
	transform: rotate(45deg);
}
	.arrow::before {
		content: '';
		width: 100%;
		height: 100%;
		border-width: 1.5px 1.5px 0 0;
		border-style: solid;
		/* border-color: #333; */
		border-color: #5964DF;
		transition: .2s ease;
		display: block;
		transform-origin: 100% 0;
	}

	
	.arrow::after {
		content: '';
		float: left;
		position: relative;
		top: -100%;
		width: 100%;
		height: 100%;
		border-width: 0 1.5px 0 0;
		border-style: solid;
		border-color: #5964DF;
		/* border-color: #333; */
		transform-origin: 100% 0;
		transition:.2s ease;
	}
	
	.apply:hover .arrow::after {
		transform: rotate(45deg);
		border-color: #5964DF;
		height: 120%;
	}
	.apply:hover .arrow::before {
		border-color: #5964DF;
		transform: scale(.8);
		
	}
	
.apply:hover p{
    color: #5964DF;
}

